tests/custom/STARIS_2022/basic/matrices/allDiff-type-error/stderr.expected
Error:
    Parser error in file: allDiff-type-error.essence Error is:
ValidatorError allDiff-type-error.essence:3:23:
  |
3 | such that a = allDiff(false)
  |                       ^^^^^
Type error:
	Expected:"Matrix or list"
	Got: bool

